--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Fabián Daza - fullstack developer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/styles.css">
@@ -80,32 +80,32 @@
                         sapiente expedita voluptatibus nisi.</p>
                     <h3 class="text-center">Skills</h3>
                     <h4>Html</h4>
-                    <div class="progress m-3">
+                    <div class="progress m-2">
                         <div class="progress-bar bg-primary" role="progressbar" aria-label="Success example"
                             style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <h4>Css</h4>
-                    <div class="progress m-3">
+                    <div class="progress m-2">
                         <div class="progress-bar bg-info" role="progressbar" aria-label="Info example"
                             style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <h4>Bootstrap</h4>
-                    <div class="progress m-3">
+                    <div class="progress m-2">
                         <div class="progress-bar bg-warning" role="progressbar" aria-label="Warning example"
                             style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <h4>Javascript</h4>
-                    <div class="progress m-3">
+                    <div class="progress m-2">
                         <div class="progress-bar bg-danger" role="progressbar" aria-label="Danger example"
                             style="width: 50%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <h4>React</h4>
-                    <div class="progress m-3">
+                    <div class="progress m-2">
                         <div class="progress-bar bg-success" role="progressbar" aria-label="Warning example"
                             style="width: 50%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <h4>SEO</h4>
-                    <div class="progress m-3">
+                    <div class="progress m-2">
                         <div class="progress-bar bg-secondary" role="progressbar" aria-label="Warning example"
                             style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
