Se cambio el titulo y los colores de fondo en el encabezado, la sección de contacto y en el footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Fabián Daza - fullstack developer</title>
+    <title>Fabián Daza - fullstack developer - Prueba de cambios</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/styles.css">
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
+    <nav class="navbar navbar-dark navbar-expand-lg bg-success">
         <div class="container">
             <a class="navbar-brand" href="#"><img class="logo" src="./assets/img/logo-fabian.png" alt="Logo-dev"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -192,7 +192,7 @@
             </div>
         </div>
     </section>
-    <section id="contact" class="bg-dark p-3">
+    <section id="contact" class="bg-success p-3">
         <div class="container text-center">
             <h2 class="text-center text-light py-4">Contact me</h2>
             <form>
@@ -222,7 +222,7 @@
             </form>
         </div>
     </section>
-    <section id="Footer" class="bg-dark p-3">
+    <section id="Footer" class="bg-success p-3">
         <div class="container text-center text-light">
             Fabián Daza 2022
         </div>
